Table display correction

--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -14,19 +14,19 @@
     <select class="accounts-per-page" id="accounts-per-page"></select>
 </div>
 
-<table class="character-table">
+<table class="player-table">
     <thead>
     <tr>
-        <th class="character-table-header">#</th>
-        <th class="character-table-header">Name</th>
-        <th class="character-table-header">Title</th>
-        <th class="character-table-header">Race</th>
-        <th class="character-table-header">Profession</th>
-        <th class="character-table-header">Level</th>
-        <th class="character-table-header">Birthday</th>
-        <th class="character-table-header">Banned</th>
-        <th class="character-table-header">Edit</th>
-        <th class="character-table-header">Delete</th>
+        <th class="player-table-header auto-width-cell">#</th>
+        <th class="player-table-header">Name</th>
+        <th class="player-table-header">Title</th>
+        <th class="player-table-header">Race</th>
+        <th class="player-table-header">Profession</th>
+        <th class="player-table-header">Level</th>
+        <th class="player-table-header">Birthday</th>
+        <th class="player-table-header">Banned</th>
+        <th class="player-table-header auto-width-cell">Edit</th>
+        <th class="player-table-header auto-width-cell">Delete</th>
     </tr>
     </thead>
     <tbody class="players-table-body">
